# Merlin

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  data  project.toml  pyproject.toml
clinic_experiments/: mlp_clinic.py  random_forest_clinic.py  svm_clinic.py  xgboost_clinic.py
configs/: config.yaml  dataset.yaml  logging.yaml  model.yaml  runner.yaml  training.yaml
configs/base_config/: config.yaml  dataset.yaml  model.yaml  training.yaml
configs/folds/: fold1.yaml  fold2.yaml  fold3.yaml  fold4.yaml  fold5.yaml
configs/folds_1phase/: fold1_ph3.yaml  fold2.yaml  fold3_ph3.yaml  fold4.yaml  fold4_ph3.yaml  fold5.yaml
configs/folds_2/: fold_1.yaml  fold_2.yaml  fold_3.yaml  fold_4.yaml  fold_5.yaml
configs/folds_2phase/: fold1.yaml  fold2.yaml  fold3.yaml  fold4.yaml  fold5.yaml
configs/mri_pre_train/: config.yaml  dataset.yaml  model.yaml  runner.yaml
configs/mri_pre_train_v2/: config.yaml  dataset.yaml  runner.yaml
configs/multimodal_MM/: config.yaml  dataset.yaml  model.yaml  training.yaml
configs/multimodal_arch_ablation/: config_no_spatial_attn.yaml  config_wo_pos_merlin.yaml  dataset.yaml  no_spatial_attn.yaml  wo_pos_merlin.yaml
configs/multimodal_baseline/: config.yaml  dataset.yaml  dataset_1phase.yaml  model.yaml  runner.yaml  training.yaml
configs/multimodal_fusion_ablation/: config.yaml  config_add.yaml  config_attn_clinic.yaml  config_concat.yaml  dataset.yaml  model.yaml  model_add.yaml  model_attn_clinic.yaml  model_concat.yaml  training.yaml
configs/multimodal_merlin/: config.yaml  dataset.yaml  model.yaml  runner.yaml
configs/multimodal_phase_ablation/: config_ph1.yaml  config_ph1ph2.yaml  config_ph2.yaml  config_ph3.yaml  dataset_ph1.yaml  dataset_ph1ph2.yaml  dataset_ph2.yaml  dataset_ph3.yaml  logging.yaml  model_1phase.yaml  model_2phase.yaml
notebooks/: BMRI_explor.ipynb  MRI_data_explore.ipynb  RF_cross_validation_updated.ipynb  clinic_explore.ipynb  data_detect.ipynb  data_detect.py  data_explore.ipynb  detect.ipynb  random_forest_clinic.py  shape_detect.py  transforms_vis.ipynb  xgboost_clinic.py
output/breast_mri_classification/logs/: events.out.tfevents.1740948867.thinkstation.70089.0  events.out.tfevents.1740949665.thinkstation.73588.0  events.out.tfevents.1740949686.thinkstation.73825.0  (+3 more)
scripts/: run_arch_ablation_cvs.sh  run_clinic_exps.sh  run_fusion_ablation_cvs.sh  run_merlin.sh  run_phase_ablation_cvs.sh
src/: run.py  run_crossval.py
src/minidl/: __init__.py
src/tests/: __init__.py
(+38 files in other folders)
