[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minidl"
version = "0.1.0"
description = "A minimal deep learning library"
authors = [
    { name = "Yang Gu", email = "ygu367@gatech.edu" }
]
classifiers = [  # See https://pypi.org/classifiers/
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy==1.26.4",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "pydicom>=3.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "opencv-python",
    "scipy",
    "tqdm",
    "tensorboard"
]


[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.15.0",
    "flake8-pyproject>=1.2.0",
]
test = [
    "pytest>=7.0",
]
notebook = [
    "ipykernel",
    "matplotlib",
    "pandas",
    "openpyxl",
    "seaborn",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.flake8]
max-line-length = 150
exclude = [".git", "__pycache__", ".venv", "build", "dist", ".mypy_cache", "notebooks/*"]
ignore = ["W503", "TYP001"]


[tool.black]
line-length = 150
target-version = ['py310']


[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
